[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/PowerupMenu/CustomShipCard/CustomShipCard.gd" type="Script" id=1]
[ext_resource path="res://UI/PowerupMenu/PowerupCard.tscn" type="PackedScene" id=2]

[node name="CustomShipCard" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Title" parent="VBoxContainer" index="0"]
text = "Boost Ship"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control/VBoxContainer" index="0"]
margin_right = 192.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShipIcon" type="NinePatchRect" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
margin_right = 94.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoostIcon" type="NinePatchRect" parent="VBoxContainer/Control/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 98.0
margin_right = 192.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Description" type="Label" parent="VBoxContainer/Control/VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 160.0
margin_right = 192.0
margin_bottom = 174.0
align = 1
valign = 1
